// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`pages > dashboard > should render correctly 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        className="govuk-heading-xl"
      >
        Test Org
         disruptions data
      </h1>
      <a
        className="govuk-button govuk-button--start"
        data-module="govuk-button"
        draggable="false"
        href="/create-disruption/acde070d-8c4c-4f0d-9d8a-162843c10333"
        id="create-new-button"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        role="button"
      >
        Create new disruption
        <svg
          className="govuk-button__start-icon"
          focusable="false"
          height="19"
          role="presentation"
          viewBox="0 0 33 40"
          width="17.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h13l20 20-20 20H0l20-20z"
            fill="currentColor"
          />
        </svg>
      </a>
      <div
        className="govuk-tabs"
        data-module="govuk-tabs"
      >
        <h2
          className="govuk-tabs__title"
        >
          Disruptions
        </h2>
        <ul
          className="govuk-tabs__list"
        >
          <li
            className="govuk-tabs__list-item govuk-tabs__list-item--selected"
          >
            <a
              className="govuk-tabs__tab"
              href="#live"
            >
              Live
            </a>
          </li>
          <li
            className="govuk-tabs__list-item"
          >
            <a
              className="govuk-tabs__tab"
              href="#upcoming"
            >
              Upcoming
            </a>
          </li>
          <li
            className="govuk-tabs__list-item"
          >
            <a
              className="govuk-tabs__tab"
              href="#recently-closed"
            >
              Recently closed
            </a>
          </li>
        </ul>
        <div
          className="govuk-tabs__panel"
          id="live"
        >
          <div
            className="src__StyledContainer-sc-gm1edz-0 cnqmnX"
          >
            <div
              backgroundColor="#ffffff"
              backgroundColorOpacity={0.85}
              className="src__Innerwrap-sc-gm1edz-1 bnLgAY"
              timeIn={800}
              timeOut={200}
            >
              <svg
                className="SVGBase__StyledSvg-sc-16k4s64-0 ftIFsY icon-loading"
                fill="#0b0c0c"
                height="50px"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="-25 -25 50 50"
                width="50px"
              >
                <title>
                  Loading
                </title>
                <rect
                  animationDelay={0}
                  className="Spinner__Rect-sc-1f5b0zr-0 hmnJwC"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(0, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={1}
                  className="Spinner__Rect-sc-1f5b0zr-0 bCNWMN"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(30, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={2}
                  className="Spinner__Rect-sc-1f5b0zr-0 gMEKWL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(60, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={3}
                  className="Spinner__Rect-sc-1f5b0zr-0 gJkjcZ"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(90, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={4}
                  className="Spinner__Rect-sc-1f5b0zr-0 grtpEE"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(120, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={5}
                  className="Spinner__Rect-sc-1f5b0zr-0 gmXQva"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(150, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={6}
                  className="Spinner__Rect-sc-1f5b0zr-0 gWBytL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(180, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={7}
                  className="Spinner__Rect-sc-1f5b0zr-0 fTcEii"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(210, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={8}
                  className="Spinner__Rect-sc-1f5b0zr-0 gCDaoO"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(240, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={9}
                  className="Spinner__Rect-sc-1f5b0zr-0 gxkXWW"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(270, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={10}
                  className="Spinner__Rect-sc-1f5b0zr-0 ghsdLB"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(300, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={11}
                  className="Spinner__Rect-sc-1f5b0zr-0 gcqsxd"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(330, 0, 2) translate(10 0)"
                  width="12"
                />
              </svg>
              <div
                className="src__Overlay-sc-gm1edz-2 kvKIBx overlay"
              />
            </div>
            <table
              className="govuk-table"
            >
              <caption
                className="govuk-table__caption govuk-table__caption--l"
              >
                Live disruptions
              </caption>
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    ID
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Summary
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Affected dates
                  </th>
                </tr>
              </thead>
              <tbody
                className="govuk-table__body"
              />
            </table>
          </div>
        </div>
        <div
          className="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="upcoming"
        >
          <div
            className="src__StyledContainer-sc-gm1edz-0 cnqmnX"
          >
            <div
              backgroundColor="#ffffff"
              backgroundColorOpacity={0.85}
              className="src__Innerwrap-sc-gm1edz-1 bnLgAY"
              timeIn={800}
              timeOut={200}
            >
              <svg
                className="SVGBase__StyledSvg-sc-16k4s64-0 ftIFsY icon-loading"
                fill="#0b0c0c"
                height="50px"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="-25 -25 50 50"
                width="50px"
              >
                <title>
                  Loading
                </title>
                <rect
                  animationDelay={0}
                  className="Spinner__Rect-sc-1f5b0zr-0 hmnJwC"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(0, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={1}
                  className="Spinner__Rect-sc-1f5b0zr-0 bCNWMN"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(30, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={2}
                  className="Spinner__Rect-sc-1f5b0zr-0 gMEKWL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(60, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={3}
                  className="Spinner__Rect-sc-1f5b0zr-0 gJkjcZ"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(90, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={4}
                  className="Spinner__Rect-sc-1f5b0zr-0 grtpEE"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(120, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={5}
                  className="Spinner__Rect-sc-1f5b0zr-0 gmXQva"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(150, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={6}
                  className="Spinner__Rect-sc-1f5b0zr-0 gWBytL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(180, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={7}
                  className="Spinner__Rect-sc-1f5b0zr-0 fTcEii"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(210, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={8}
                  className="Spinner__Rect-sc-1f5b0zr-0 gCDaoO"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(240, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={9}
                  className="Spinner__Rect-sc-1f5b0zr-0 gxkXWW"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(270, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={10}
                  className="Spinner__Rect-sc-1f5b0zr-0 ghsdLB"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(300, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={11}
                  className="Spinner__Rect-sc-1f5b0zr-0 gcqsxd"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(330, 0, 2) translate(10 0)"
                  width="12"
                />
              </svg>
              <div
                className="src__Overlay-sc-gm1edz-2 kvKIBx overlay"
              />
            </div>
            <table
              className="govuk-table"
            >
              <caption
                className="govuk-table__caption govuk-table__caption--l"
              >
                Upcoming disruptions
              </caption>
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    ID
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Summary
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Affected dates
                  </th>
                </tr>
              </thead>
              <tbody
                className="govuk-table__body"
              />
            </table>
          </div>
        </div>
        <div
          className="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="recently-closed"
        >
          <div
            className="src__StyledContainer-sc-gm1edz-0 cnqmnX"
          >
            <div
              backgroundColor="#ffffff"
              backgroundColorOpacity={0.85}
              className="src__Innerwrap-sc-gm1edz-1 bnLgAY"
              timeIn={800}
              timeOut={200}
            >
              <svg
                className="SVGBase__StyledSvg-sc-16k4s64-0 ftIFsY icon-loading"
                fill="#0b0c0c"
                height="50px"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="-25 -25 50 50"
                width="50px"
              >
                <title>
                  Loading
                </title>
                <rect
                  animationDelay={0}
                  className="Spinner__Rect-sc-1f5b0zr-0 hmnJwC"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(0, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={1}
                  className="Spinner__Rect-sc-1f5b0zr-0 bCNWMN"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(30, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={2}
                  className="Spinner__Rect-sc-1f5b0zr-0 gMEKWL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(60, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={3}
                  className="Spinner__Rect-sc-1f5b0zr-0 gJkjcZ"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(90, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={4}
                  className="Spinner__Rect-sc-1f5b0zr-0 grtpEE"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(120, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={5}
                  className="Spinner__Rect-sc-1f5b0zr-0 gmXQva"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(150, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={6}
                  className="Spinner__Rect-sc-1f5b0zr-0 gWBytL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(180, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={7}
                  className="Spinner__Rect-sc-1f5b0zr-0 fTcEii"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(210, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={8}
                  className="Spinner__Rect-sc-1f5b0zr-0 gCDaoO"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(240, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={9}
                  className="Spinner__Rect-sc-1f5b0zr-0 gxkXWW"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(270, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={10}
                  className="Spinner__Rect-sc-1f5b0zr-0 ghsdLB"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(300, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={11}
                  className="Spinner__Rect-sc-1f5b0zr-0 gcqsxd"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(330, 0, 2) translate(10 0)"
                  width="12"
                />
              </svg>
              <div
                className="src__Overlay-sc-gm1edz-2 kvKIBx overlay"
              />
            </div>
            <table
              className="govuk-table"
            >
              <caption
                className="govuk-table__caption govuk-table__caption--l"
              >
                Closed disruptions
              </caption>
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    ID
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Summary
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Affected dates
                  </th>
                </tr>
              </thead>
              <tbody
                className="govuk-table__body"
              />
            </table>
          </div>
        </div>
      </div>
      <a
        className="govuk-link"
        href="/view-all-disruptions"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all disruptions
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/view-all-social-media"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all social media
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/view-all-disruptions?draft=true"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          Draft disruptions
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/view-all-templates"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          Templates
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/view-all-roadworks"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          Create disruptions from roadworks in your area
        </h2>
      </a>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;

exports[`pages > dashboard > should render correctly for an operator user 1`] = `
[
  <div
    className="app-phase-banner__wrapper"
  >
    <div
      className="govuk-phase-banner max-w-[960px] w-[90%] border-0 mx-auto app-phase-banner app-width-container"
    >
      <p
        className="govuk-phase-banner__content"
      >
        <strong
          className="govuk-tag govuk-phase-banner__content__tag"
        >
          beta
        </strong>
        <span
          className="govuk-phase-banner__text"
        >
          This is a new service – your
           
          <a
            className="govuk-link"
            href="/feedback"
            id="feedback-link"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            feedback
          </a>
           
          will help us to improve it.
        </span>
      </p>
    </div>
  </div>,
  <div
    className="govuk-width-container"
  >
    <main
      className="govuk-main-wrapper"
      id="main-content"
    >
      <h1
        className="govuk-heading-xl"
      >
        Test Org
         disruptions data
      </h1>
      <a
        className="govuk-button govuk-button--start"
        data-module="govuk-button"
        draggable="false"
        href="/create-disruption/acde070d-8c4c-4f0d-9d8a-162843c10333"
        id="create-new-button"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
        role="button"
      >
        Create new disruption
        <svg
          className="govuk-button__start-icon"
          focusable="false"
          height="19"
          role="presentation"
          viewBox="0 0 33 40"
          width="17.5"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M0 0h13l20 20-20 20H0l20-20z"
            fill="currentColor"
          />
        </svg>
      </a>
      <div
        className="govuk-tabs"
        data-module="govuk-tabs"
      >
        <h2
          className="govuk-tabs__title"
        >
          Disruptions
        </h2>
        <ul
          className="govuk-tabs__list"
        >
          <li
            className="govuk-tabs__list-item govuk-tabs__list-item--selected"
          >
            <a
              className="govuk-tabs__tab"
              href="#live"
            >
              Live
            </a>
          </li>
          <li
            className="govuk-tabs__list-item"
          >
            <a
              className="govuk-tabs__tab"
              href="#upcoming"
            >
              Upcoming
            </a>
          </li>
          <li
            className="govuk-tabs__list-item"
          >
            <a
              className="govuk-tabs__tab"
              href="#recently-closed"
            >
              Recently closed
            </a>
          </li>
        </ul>
        <div
          className="govuk-tabs__panel"
          id="live"
        >
          <div
            className="src__StyledContainer-sc-gm1edz-0 cnqmnX"
          >
            <div
              backgroundColor="#ffffff"
              backgroundColorOpacity={0.85}
              className="src__Innerwrap-sc-gm1edz-1 bnLgAY"
              timeIn={800}
              timeOut={200}
            >
              <svg
                className="SVGBase__StyledSvg-sc-16k4s64-0 ftIFsY icon-loading"
                fill="#0b0c0c"
                height="50px"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="-25 -25 50 50"
                width="50px"
              >
                <title>
                  Loading
                </title>
                <rect
                  animationDelay={0}
                  className="Spinner__Rect-sc-1f5b0zr-0 hmnJwC"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(0, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={1}
                  className="Spinner__Rect-sc-1f5b0zr-0 bCNWMN"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(30, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={2}
                  className="Spinner__Rect-sc-1f5b0zr-0 gMEKWL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(60, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={3}
                  className="Spinner__Rect-sc-1f5b0zr-0 gJkjcZ"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(90, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={4}
                  className="Spinner__Rect-sc-1f5b0zr-0 grtpEE"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(120, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={5}
                  className="Spinner__Rect-sc-1f5b0zr-0 gmXQva"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(150, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={6}
                  className="Spinner__Rect-sc-1f5b0zr-0 gWBytL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(180, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={7}
                  className="Spinner__Rect-sc-1f5b0zr-0 fTcEii"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(210, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={8}
                  className="Spinner__Rect-sc-1f5b0zr-0 gCDaoO"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(240, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={9}
                  className="Spinner__Rect-sc-1f5b0zr-0 gxkXWW"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(270, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={10}
                  className="Spinner__Rect-sc-1f5b0zr-0 ghsdLB"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(300, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={11}
                  className="Spinner__Rect-sc-1f5b0zr-0 gcqsxd"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(330, 0, 2) translate(10 0)"
                  width="12"
                />
              </svg>
              <div
                className="src__Overlay-sc-gm1edz-2 kvKIBx overlay"
              />
            </div>
            <table
              className="govuk-table"
            >
              <caption
                className="govuk-table__caption govuk-table__caption--l"
              >
                Live disruptions
              </caption>
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    ID
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Summary
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Affected dates
                  </th>
                </tr>
              </thead>
              <tbody
                className="govuk-table__body"
              />
            </table>
          </div>
        </div>
        <div
          className="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="upcoming"
        >
          <div
            className="src__StyledContainer-sc-gm1edz-0 cnqmnX"
          >
            <div
              backgroundColor="#ffffff"
              backgroundColorOpacity={0.85}
              className="src__Innerwrap-sc-gm1edz-1 bnLgAY"
              timeIn={800}
              timeOut={200}
            >
              <svg
                className="SVGBase__StyledSvg-sc-16k4s64-0 ftIFsY icon-loading"
                fill="#0b0c0c"
                height="50px"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="-25 -25 50 50"
                width="50px"
              >
                <title>
                  Loading
                </title>
                <rect
                  animationDelay={0}
                  className="Spinner__Rect-sc-1f5b0zr-0 hmnJwC"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(0, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={1}
                  className="Spinner__Rect-sc-1f5b0zr-0 bCNWMN"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(30, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={2}
                  className="Spinner__Rect-sc-1f5b0zr-0 gMEKWL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(60, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={3}
                  className="Spinner__Rect-sc-1f5b0zr-0 gJkjcZ"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(90, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={4}
                  className="Spinner__Rect-sc-1f5b0zr-0 grtpEE"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(120, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={5}
                  className="Spinner__Rect-sc-1f5b0zr-0 gmXQva"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(150, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={6}
                  className="Spinner__Rect-sc-1f5b0zr-0 gWBytL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(180, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={7}
                  className="Spinner__Rect-sc-1f5b0zr-0 fTcEii"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(210, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={8}
                  className="Spinner__Rect-sc-1f5b0zr-0 gCDaoO"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(240, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={9}
                  className="Spinner__Rect-sc-1f5b0zr-0 gxkXWW"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(270, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={10}
                  className="Spinner__Rect-sc-1f5b0zr-0 ghsdLB"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(300, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={11}
                  className="Spinner__Rect-sc-1f5b0zr-0 gcqsxd"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(330, 0, 2) translate(10 0)"
                  width="12"
                />
              </svg>
              <div
                className="src__Overlay-sc-gm1edz-2 kvKIBx overlay"
              />
            </div>
            <table
              className="govuk-table"
            >
              <caption
                className="govuk-table__caption govuk-table__caption--l"
              >
                Upcoming disruptions
              </caption>
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    ID
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Summary
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Affected dates
                  </th>
                </tr>
              </thead>
              <tbody
                className="govuk-table__body"
              />
            </table>
          </div>
        </div>
        <div
          className="govuk-tabs__panel govuk-tabs__panel--hidden"
          id="recently-closed"
        >
          <div
            className="src__StyledContainer-sc-gm1edz-0 cnqmnX"
          >
            <div
              backgroundColor="#ffffff"
              backgroundColorOpacity={0.85}
              className="src__Innerwrap-sc-gm1edz-1 bnLgAY"
              timeIn={800}
              timeOut={200}
            >
              <svg
                className="SVGBase__StyledSvg-sc-16k4s64-0 ftIFsY icon-loading"
                fill="#0b0c0c"
                height="50px"
                preserveAspectRatio="xMidYMid meet"
                version="1.1"
                viewBox="-25 -25 50 50"
                width="50px"
              >
                <title>
                  Loading
                </title>
                <rect
                  animationDelay={0}
                  className="Spinner__Rect-sc-1f5b0zr-0 hmnJwC"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(0, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={1}
                  className="Spinner__Rect-sc-1f5b0zr-0 bCNWMN"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(30, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={2}
                  className="Spinner__Rect-sc-1f5b0zr-0 gMEKWL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(60, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={3}
                  className="Spinner__Rect-sc-1f5b0zr-0 gJkjcZ"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(90, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={4}
                  className="Spinner__Rect-sc-1f5b0zr-0 grtpEE"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(120, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={5}
                  className="Spinner__Rect-sc-1f5b0zr-0 gmXQva"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(150, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={6}
                  className="Spinner__Rect-sc-1f5b0zr-0 gWBytL"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(180, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={7}
                  className="Spinner__Rect-sc-1f5b0zr-0 fTcEii"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(210, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={8}
                  className="Spinner__Rect-sc-1f5b0zr-0 gCDaoO"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(240, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={9}
                  className="Spinner__Rect-sc-1f5b0zr-0 gxkXWW"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(270, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={10}
                  className="Spinner__Rect-sc-1f5b0zr-0 ghsdLB"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(300, 0, 2) translate(10 0)"
                  width="12"
                />
                <rect
                  animationDelay={11}
                  className="Spinner__Rect-sc-1f5b0zr-0 gcqsxd"
                  fill="#0b0c0c"
                  height="5"
                  opacity="0"
                  rx="2.5"
                  ry="2.5"
                  transform="rotate(330, 0, 2) translate(10 0)"
                  width="12"
                />
              </svg>
              <div
                className="src__Overlay-sc-gm1edz-2 kvKIBx overlay"
              />
            </div>
            <table
              className="govuk-table"
            >
              <caption
                className="govuk-table__caption govuk-table__caption--l"
              >
                Closed disruptions
              </caption>
              <thead
                className="govuk-table__head"
              >
                <tr
                  className="govuk-table__row"
                >
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    ID
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Summary
                  </th>
                  <th
                    className="govuk-table__header align-middle px-2"
                    scope="col"
                  >
                    Affected dates
                  </th>
                </tr>
              </thead>
              <tbody
                className="govuk-table__body"
              />
            </table>
          </div>
        </div>
      </div>
      <a
        className="govuk-link"
        href="/view-all-disruptions"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all disruptions
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/view-all-social-media"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View all social media
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/view-all-disruptions?draft=true"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          Draft disruptions
        </h2>
      </a>
      <a
        className="govuk-link"
        href="/view-all-roadworks"
        onClick={[Function]}
        onMouseEnter={[Function]}
        onTouchStart={[Function]}
      >
        <h2
          className="govuk-heading-s text-govBlue"
        >
          View roadworks in your area
        </h2>
      </a>
    </main>
    <div>
      <h2
        className="govuk-heading-s"
      >
        Help and Support
      </h2>
      <p
        className="govuk-body"
      >
        If you are having problems, please contact the Create Disruption Service via this link:
         
        <a
          className="govuk-link govuk-!-font-size-19"
          href="/contact"
          onClick={[Function]}
          onMouseEnter={[Function]}
          onTouchStart={[Function]}
        >
          Contact us
        </a>
      </p>
    </div>
  </div>,
  <footer
    className="govuk-footer"
    role="contentinfo"
  >
    <div
      className="govuk-width-container"
    >
      <div
        className="govuk-footer__meta"
      >
        <div
          className="govuk-footer__meta-item govuk-footer__meta-item--grow"
        >
          <h2
            className="govuk-visually-hidden"
          >
            Support links
          </h2>
          <ul
            className="govuk-footer__inline-list"
          >
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Help
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/cookies"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Cookies
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/contact"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Contact
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/accessibility"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Accessibility
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="https://www.gov.uk/help/terms-conditions"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Terms and conditions
              </a>
            </li>
            <li
              className="govuk-footer__inline-list-item"
            >
              <a
                className="govuk-footer__link"
                href="/privacy"
                onClick={[Function]}
                onMouseEnter={[Function]}
                onTouchStart={[Function]}
              >
                Privacy
              </a>
            </li>
          </ul>
          <p
            className="govuk-footer__body"
          >
            Built by the
             
            <a
              className="govuk-footer__link"
              href="https://www.gov.uk/government/organisations/department-for-transport"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="noreferrer"
              target="_blank"
            >
              Department for Transport
            </a>
          </p>
          <svg
            aria-hidden="true"
            className="govuk-footer__licence-logo"
            focusable="false"
            height="17"
            viewBox="0 0 483.2 195.7"
            width="41"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M421.5 142.8V.1l-50.7 32.3v161.1h112.4v-50.7zm-122.3-9.6A47.12 47.12 0 0 1 221 97.8c0-26 21.1-47.1 47.1-47.1 16.7 0 31.4 8.7 39.7 21.8l42.7-27.2A97.63 97.63 0 0 0 268.1 0c-36.5 0-68.3 20.1-85.1 49.7A98 98 0 0 0 97.8 0C43.9 0 0 43.9 0 97.8s43.9 97.8 97.8 97.8c36.5 0 68.3-20.1 85.1-49.7a97.76 97.76 0 0 0 149.6 25.4l19.4 22.2h3v-87.8h-80l24.3 27.5zM97.8 145c-26 0-47.1-21.1-47.1-47.1s21.1-47.1 47.1-47.1 47.2 21 47.2 47S123.8 145 97.8 145"
              fill="currentColor"
            />
          </svg>
          <span
            className="govuk-footer__licence-description"
          >
            All content is available under the
             
            <a
              className="govuk-footer__link"
              href="https://www.nationalarchives.gov.uk/doc/open-government-licence/version/3/"
              onClick={[Function]}
              onMouseEnter={[Function]}
              onTouchStart={[Function]}
              rel="license"
            >
              Open Government Licence v3.0
            </a>
            , except where otherwise stated
          </span>
        </div>
        <div
          className="govuk-footer__meta-item"
        >
          <a
            className="govuk-footer__link govuk-footer__copyright-logo bg-govuk-crest"
            href="https://www.nationalarchives.gov.uk/information-management/re-using-public-sector-information/uk-government-licensing-framework/crown-copyright/"
            onClick={[Function]}
            onMouseEnter={[Function]}
            onTouchStart={[Function]}
          >
            © Crown copyright
          </a>
        </div>
      </div>
    </div>
  </footer>,
]
`;
